# TelegramBot

./: class_headhunter_api.py  class_job_files.py  class_job_vacancies.py  config.py  country.json  data_vacancies.json  main.py  pyproject.toml
data/: data_vacancies.json
