[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["Andrey Fedoseev <MaxviP100@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
